toggler burger correction and overlapping coorection hence it may increase user experince

--- a/administrator/templates/atum/scss/blocks/_sidebar.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar.scss
@@ -517,11 +517,6 @@
     right: 10px;
     z-index: $zindex-mobile-toggle;
 
-    [dir=rtl] & {
-      right: auto;
-      left: 10px;
-    }
-
     .navbar-toggler-icon {
       color: var(--toggle-color);
 
@@ -532,7 +527,7 @@
       }
     }
 
-    &.mm-collapsed {
+    &.collapsed {
       .navbar-toggler-icon::before {
         content: "\f0c9";
       }
